--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@ header {
 
 .navAnchor {
   font-family: var(--navFont);
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .navAnchor:hover {
-  border-bottom: 1px rgb(216, 240, 236);
+  border-bottom: 3px rgb(216, 240, 236);
   border-style: groove;
   padding-bottom: 0.5rem;
 }
@@ -89,10 +89,10 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .bannerContent {
-  flex-basis: 30%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -110,25 +110,28 @@ main {
 }
 
 .bannerContent h1 {
-  font-size: 4rem;
+  font-size: 3rem;
+  width: 70%;
   font-weight: bold;
   text-align: center;
   line-break: strict;
 }
 
 .slogan {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .button {
-  width: 10rem;
+  width: 25%;
+  height: auto;
   background-color: black;
-  padding: 1rem;
+  padding: 2%;
   font-weight: bold;
   word-spacing: 0.5rem;
   color: darkgoldenrod;
   text-align: center;
-  border-radius: 8%;
+  border-radius: 5rem;
+  font-size: 0.7rem;
 }
 
 .socialmedias {
@@ -137,9 +140,11 @@ main {
   width: 20%;
   opacity: 0.5;
 }
+.socialmedias .icon {
+  width: 0.7rem;
+}
 
 .bannerImage {
-  flex-basis: 30%;
   height: 80%;
   display: flex;
   justify-content: center;
@@ -158,6 +163,6 @@ main {
   width: 100%;
   height: 100%;
   position: relative;
-  right: 15%;
-  opacity: 0.8;
+  right: 20%;
+  opacity: 0.9;
 }
