--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Righteous&family=Satisfy&display=swap");
 
 :root {
-  --navFont: "Righteous", cursive;
+  --navFont: "Satisfy", cursive;
+  --bannerFont: "Righteous", cursive;
+  --garamond: "EB Garamond", serif;
 }
 
 html {
   font-size: 16px;
 }
 
+body {
+  max-width: 100vw;
+  font-family: var(--garamond);
+}
 .salesBar {
   position: absolute;
   top: 0rem;
@@ -29,22 +35,41 @@ header {
   width: 100vw;
   padding: 3rem 2.5rem 2rem 6rem;
   background-color: white;
-  height: 20vh;
+  height: 15vh;
   z-index: 9;
 }
-.logo {
-  flex-basis: 20%;
 
+.logoName {
+  font-size: 4rem;
+  color: darkgoldenrod;
+  font-weight: bold;
   flex-shrink: 2;
 }
-.logoImg {
-  width: 100%;
+.logoName span {
+  color: brown;
+  font-size: 5rem;
+  flex-shrink: 2;
+  margin-left: 1rem;
 }
 
 .navBar1 {
   flex-basis: 70%;
+  color: brown;
+  font-weight: bold;
+  margin-right: 20rem;
 }
-
+.search {
+  display: flex;
+  align-items: center;
+  gap: 1%;
+}
+.searchForm {
+  width: 70%;
+  border-radius: 10px;
+  border: 1px solid black;
+  padding: 2%;
+  opacity: 0.3;
+}
 .navBar2 {
   flex-basis: 10%;
 }
@@ -57,11 +82,13 @@ header {
   display: flex;
   justify-content: center;
   gap: 10%;
+  padding-top: 2rem;
 }
 
 .navAnchor {
-  font-family: var(--navFont);
-  font-size: 1rem;
+  font-family: var(--garamond);
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .navAnchor:hover {
@@ -70,99 +97,293 @@ header {
   padding-bottom: 0.5rem;
 }
 
+.navAnchor:active {
+  color: rgb(216, 240, 236);
+}
+
 .icon {
   width: 1.2rem;
 }
 
+.icon:hover {
+  opacity: 0.5;
+}
+/*---------------------------------------------*/
 main {
   min-height: 80vh;
   position: relative;
   top: 20vh;
+  max-width: 100vw;
 }
+/*---------------------------------------------*/
 /*BANNER*/
 
 .banner {
-  background-color: rgba(216, 240, 236, 0.4);
   width: 100vw;
-  height: 50vh;
+  height: 70vh;
   color: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  opacity: 0.7;
+  background-image: url(./images/banner.png);
+  background-size: cover;
+}
+
+.bannerImage {
+  flex-basis: 50%;
+  height: 100%;
+  background-image: url(./images/wp3151964.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .bannerContent {
   height: 100%;
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  font-weight: var(--navFont);
-  padding: 2rem;
+  justify-content: space-around;
+  font-family: var(--garamond);
+  padding: 3rem 0 0;
+  color: darkgoldenrod;
+  text-align: center;
 }
 
 .bannerContent span {
-  color: darkgoldenrod;
   font-weight: bold;
+  color: darkgoldenrod;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
 }
 
 .bannerContent h1 {
-  font-size: 3rem;
-  width: 70%;
+  font-size: 400%;
+  width: 50%;
   font-weight: bold;
   text-align: center;
-  line-break: strict;
-}
-
-.slogan {
-  font-size: 0.9rem;
+  color: brown;
+  line-height: 5rem;
 }
 
 .button {
-  width: 25%;
   height: auto;
-  background-color: black;
-  padding: 2%;
+  padding: 1rem 2rem;
   font-weight: bold;
   word-spacing: 0.5rem;
-  color: darkgoldenrod;
   text-align: center;
-  border-radius: 5rem;
-  font-size: 0.7rem;
+  font-size: 1rem;
+  border: 1px solid rgb(157, 159, 158);
+}
+
+.button:hover {
+  border: 1px solid rgb(248, 246, 246);
+  opacity: 0.8;
+}
+
+.button:active {
+  position: relative;
+  top: 0.1rem;
+  bottom: 0.1rem;
 }
 
 .socialmedias {
   display: flex;
-  justify-content: space-between;
-  width: 20%;
-  opacity: 0.5;
+  justify-content: space-around;
+  width: 30%;
+  opacity: 0.9;
 }
 .socialmedias .icon {
   width: 0.7rem;
 }
+/*---------------------------------------------*/
 
-.bannerImage {
-  height: 80%;
+/*Shop politicy*/
+
+.politics {
+  margin: 0 auto;
+  padding: 3%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2%;
+  width: 100%;
+  background-color: rgb(250, 247, 247);
+}
+
+.politicItem {
+  display: flex;
+  align-items: flex-start;
+  width: 15%;
+}
+
+.politicIcon {
+  width: 15%;
+}
+.politicDescription {
+  margin-left: 10%;
+  line-height: 1.5rem;
+  font-size: 0.8rem;
+  font-family: var(--garamond);
+}
+
+.politicDescription p:first-of-type {
+  font-weight: bold;
+  margin-bottom: 3%;
+}
+/*---------------------------------------------*/
+
+/*PRODUCTS*/
+#products {
+  margin: 5% 0;
+  text-align: center;
+}
+
+.categorysTitle {
+  font: 1.5rem bold;
+  color: white;
+  background-color: rgba(218, 165, 32, 0.7);
+  max-width: 50vw;
+  margin: 0 auto;
+}
+
+.sales {
+  background-color: rgba(165, 42, 42, 0.7);
+  color: white;
+}
+
+.new {
+}
+
+.productContenant {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
-  align-self: flex-end;
+  gap: 3%;
+  padding: 2rem 0;
+  flex-wrap: wrap;
+  max-width: 50vw;
 }
 
-.circle {
-  background-color: rgba(244, 164, 96, 0.3);
-  position: absolute;
-  z-index: 0;
-  width: 20%;
-  height: 40%;
-  border-radius: 50%;
+.category {
+  width: 15em;
+  height: 15rem;
+  margin-bottom: 8%;
 }
-.bannerImg {
+
+.category:hover {
+  opacity: 0.8;
+}
+
+.categoryPhoto {
   width: 100%;
   height: 100%;
+  border-radius: 5%;
+}
+
+.categoryBanner {
+  color: black;
+  opacity: 0.7;
   position: relative;
-  right: 20%;
-  opacity: 0.9;
+  bottom: 50%;
+  text-align: center;
+  width: 100%;
+  padding: 1rem;
+  background-color: aliceblue;
+}
+.categoryBanner span {
+  font-weight: bold;
+  color: brown;
+}
+
+.categoryName {
+  margin: 1.5% 0;
+  font-weight: bold;
+}
+
+.category figcaption {
+  font-size: 0.8rem;
+  text-align: left;
+  padding-left: 5%;
+}
+
+.price {
+  color: black;
+  font-weight: bold;
+  margin-top: 1%;
+}
+
+/*About*/
+#about {
+  margin: 5% auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(250, 247, 247);
+  padding: 8rem;
+}
+
+#about h2 {
+  font-size: 2rem;
+  margin-bottom: 4%;
+}
+.about {
+  line-height: 1.8rem;
+  text-align: justify;
+}
+
+.missonsTeam {
+  margin-top: 10%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.missions {
+  width: 70%;
+  height: fit-content;
+  background-color: rgb(237, 236, 236);
+  padding: 3rem;
+  border-radius: 10%;
+}
+
+.missions h3 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 4%;
+}
+
+.missions p {
+  text-align: center;
+  line-height: 1.8rem;
+}
+
+.team {
+  flex-basis: 80%;
+  display: flex;
+
+  gap: 4rem;
+  flex-wrap: wrap;
+}
+.team figure {
+  width: 10rem;
+  height: 10rem;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.teamPhoto {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.team figure figcaption:first-of-type {
+  font-weight: bold;
+}
+
+.team figcaption {
+  font-size: 70%;
+  margin-top: 3%;
 }
