--- a/style.css
+++ b/style.css
@@ -14,18 +14,7 @@ body {
   max-width: 100vw;
   font-family: var(--garamond);
 }
-.salesBar {
-  position: absolute;
-  top: 0rem;
-  left: 0;
-  width: 100%;
-  padding: 0.5rem;
-  background-color: rgba(244, 164, 96, 0.3);
-  color: rgb(20, 2, 2);
-  font-size: 1rem;
-  text-decoration: underline;
-  text-align: center;
-}
+
 /*HEADER*/
 header {
   position: fixed;
@@ -111,10 +100,16 @@ header {
 /*---------------------------------------------*/
 main {
   min-height: 80vh;
+  max-height: fit-content;
   position: relative;
   top: 20vh;
   max-width: 100vw;
 }
+
+section:nth-child(even) {
+  background-color: rgb(250, 247, 247);
+}
+
 /*---------------------------------------------*/
 /*BANNER*/
 
@@ -210,7 +205,6 @@ main {
   justify-content: center;
   gap: 2%;
   width: 100%;
-  background-color: rgb(250, 247, 247);
 }
 
 .politicItem {
@@ -237,7 +231,7 @@ main {
 
 /*PRODUCTS*/
 #products {
-  margin: 5% 0;
+  margin-top: 5%;
   text-align: center;
 }
 
@@ -246,15 +240,12 @@ main {
   color: white;
   background-color: rgba(218, 165, 32, 0.7);
   max-width: 50vw;
-  margin: 0 auto;
+  margin: 0 auto 2%;
 }
 
 .sales {
   background-color: rgba(165, 42, 42, 0.7);
   color: white;
-}
-
-.new {
 }
 
 .productContenant {
@@ -322,7 +313,6 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(250, 247, 247);
   padding: 8rem;
 }
 
@@ -386,4 +376,78 @@ main {
 .team figcaption {
   font-size: 70%;
   margin-top: 3%;
+}
+
+/*FOOTER*/
+
+footer {
+  position: relative;
+  top: 10vh;
+  padding: 3rem;
+  height: 30vh;
+  background-color: rgba(227, 210, 167, 0.4);
+  display: flex;
+  color: rgb(114, 110, 110);
+}
+
+.newsletterSocialmedias {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  flex-basis: 30%;
+}
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter label {
+  font-size: 1.5rem;
+  margin-bottom: 2%;
+}
+
+.newsletter input {
+  font-size: 1rem;
+  width: 50%;
+  height: 40%;
+}
+
+footer .socialmedias {
+  justify-content: flex-start;
+  gap: 30%;
+  width: 60%;
+}
+
+footer .socialmedias .icon {
+  width: 40%;
+  opacity: 0.6;
+}
+
+.contacts {
+  display: flex;
+  justify-content: center;
+  flex-basis: 70%;
+}
+
+.contactType {
+  flex-basis: 33.33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.contactIcon {
+  width: 10%;
+  height: 30%;
+  opacity: 0.6;
+}
+
+.contactDescription {
+  text-align: center;
+  line-height: 1.7rem;
+  font-size: 1.2rem;
+  flex-basis: 50%;
 }
