--- a/style.css
+++ b/style.css
@@ -447,3 +447,213 @@ footer .socialmedias .icon {
   font-size: 1.2rem;
   flex-basis: 50%;
 }
+
+/* MEDIA QUERIES*/
+
+@media screen and (max-width: 900px) {
+  header {
+    justify-content: space-between;
+    padding: 1rem;
+  }
+  .logoName {
+    font-size: 3rem;
+  }
+  .logoName span {
+    font-size: 4rem;
+    margin-left: 0;
+  }
+  .navBar1 {
+    display: none;
+  }
+
+  .icon {
+    width: 1rem;
+  }
+
+  main {
+    top: 15vh;
+  }
+
+  .banner {
+    background-image: url(./images/wp3151964.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    align-items: flex-start;
+  }
+
+  .bannerImage {
+    display: none;
+  }
+
+  .bannerContent {
+    flex-basis: 100%;
+    padding: 1rem 0 0;
+    height: 40%;
+    justify-content: space-around;
+  }
+
+  .bannerContent span p:first-child {
+    font-size: 0.5rem;
+  }
+
+  .bannerContent h1 {
+    font-size: 200%;
+    line-height: 2rem;
+  }
+
+  .button {
+    height: auto;
+    padding: 0.2rem;
+    font-size: 0.8rem;
+    margin-bottom: 0.6rem;
+  }
+
+  .banner .socialmedias {
+    display: none;
+  }
+
+  .politics {
+    padding: 5%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 2%;
+    width: 100%;
+  }
+
+  .politicItem {
+    display: block;
+    width: 30%;
+    text-align: center;
+  }
+
+  .politicIcon {
+    width: 20%;
+  }
+  .politicDescription {
+    font-size: 0.7rem;
+  }
+
+  /*PRODUCTS*/
+  .categorysTitle {
+    font: 1.3rem;
+    max-width: 100vw;
+  }
+
+  .productContenant {
+    padding: 1rem 0;
+    max-width: 70vw;
+  }
+
+  .category {
+    width: 10rem;
+    height: 10rem;
+    margin-bottom: 15%;
+  }
+
+  .categoryBanner {
+    padding: 0.2rem;
+  }
+
+  .category figcaption {
+    font-size: 0.8rem;
+    text-align: left;
+    padding-left: 5%;
+  }
+
+  .price {
+    margin-top: 0;
+    position: relative;
+    bottom: 7.5%;
+    left: 70%;
+  }
+
+  /*About*/
+  #about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5rem 2rem;
+    margin-bottom: 0;
+  }
+
+  .missonsTeam {
+    display: block;
+  }
+
+  .missions {
+    width: 95%;
+    padding: 1rem;
+  }
+
+  .missions p {
+    line-height: 1.5rem;
+  }
+
+  .team {
+    justify-content: space-around;
+    margin-bottom: 10%;
+  }
+
+  .team figure {
+    width: 7rem;
+    height: 7rem;
+    margin-bottom: 3rem;
+  }
+  .teamPhoto {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+
+  /*FOOTER*/
+
+  footer {
+    top: 15vh;
+    padding: 2rem;
+    display: block;
+    height: fit-content;
+  }
+
+  .newsletterSocialmedias {
+    height: 20vh;
+    width: 100%;
+    margin-bottom: 10%;
+    align-items: center;
+  }
+
+  .newsletter label {
+    font-size: 1rem;
+  }
+
+  .newsletter input {
+    font-size: 0.5rem;
+    width: 100%;
+    height: 30%;
+  }
+
+  footer .socialmedias {
+    width: 50%;
+  }
+
+  footer .socialmedias .icon {
+    width: 70%;
+  }
+
+  .contacts {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contactType {
+    flex-basis: 33%;
+  }
+
+  .contactDescription {
+    line-height: 1.2rem;
+    font-size: 0.7rem;
+  }
+}
